# scrollshot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
pkg/: Makefile  PKGBUILD  README.md
src/: main.rs  screencopy.rs  selector.rs  stitch.rs
